# codex

codex-rs/: Cargo.toml
codex-rs/app-server-protocol/src/protocol/: common.rs  v2.rs
codex-rs/app-server-test-client/src/: main.rs
codex-rs/core/src/config/: types.rs
codex-rs/execpolicy2/: Cargo.toml  README.md
codex-rs/execpolicy2/src/: decision.rs  default.policy  error.rs  lib.rs  main.rs  parser.rs  policy.rs  rule.rs
codex-rs/execpolicy2/tests/: basic.rs
codex-rs/otel/src/: otel_provider.rs
docs/: config.md  example-config.md
