[package]
name = "codex-execpolicy2"
version = "0.0.0"
edition = "2024"
description = "Codex exec policy v2: prefix-based Starlark rules for command decisions."

[lib]
name = "codex_execpolicy2"
path = "src/lib.rs"

[[bin]]
name = "codex-execpolicy2"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
starlark = { workspace = true }
thiserror = { workspace = true }
multimap = { workspace = true }
clap = { workspace = true, features = ["derive"] }
parking_lot = { workspace = true }
shlex = { workspace = true }
